@@ -303,6 +303,19 @@
 #
 ##########################################################################################################
 #
+## IPMI_Cooling_Device_Redundancy
+#
+# IPMI_Cooling_Device_Redundancy_Fully_Redundant                                                   Nominal  Nominal
+# IPMI_Cooling_Device_Redundancy_Redundancy_Lost                                                   Critical Warning
+# IPMI_Cooling_Device_Redundancy_Redundancy_Degraded                                               Warning  Warning
+# IPMI_Cooling_Device_Redundancy_Non_Redundant_Sufficient_Resources_From_Redundant                 Critical Warning
+# IPMI_Cooling_Device_Redundancy_Non_Redundant_Sufficient_Resources_From_Insufficient_Redundancy   Critical Warning
+# IPMI_Cooling_Device_Redundancy_Non_Redundant_Insufficient_Resources                              Critical Warning
+# IPMI_Cooling_Device_Redundancy_Redundancy_Degraded_From_Fully_Redundant                          Warning  Warning
+# IPMI_Cooling_Device_Redundancy_Redundancy_Degraded_From_Non_Redundant                            Warning  Warning
+#
+##########################################################################################################
+#
 ## IPMI_Memory
 #
 # IPMI_Memory_Correctable_Memory_Error                           Warning
