@@ -321,6 +321,20 @@
 #
 ##########################################################################################################
 #
+## IPMI_Cooling_Device_Redundancy
+#
+# IPMI_Cooling_Device_Redundancy_No_Event                                                         Nominal
+# IPMI_Cooling_Device_Redundancy_Fully_Redundant                                                  Nominal
+# IPMI_Cooling_Device_Redundancy_Redundancy_Lost                                                  Critical
+# IPMI_Cooling_Device_Redundancy_Redundancy_Degraded                                              Warning
+# IPMI_Cooling_Device_Redundancy_Non_Redundant_Sufficient_Resources_From_Redundant                Critical
+# IPMI_Cooling_Device_Redundancy_Non_Redundant_Sufficient_Resources_From_Insufficient_Redundancy  Critical
+# IPMI_Cooling_Device_Redundancy_Non_Redundant_Insufficient_Resources                             Critical
+# IPMI_Cooling_Device_Redundancy_Redundancy_Degraded_From_Fully_Redundant                         Warning
+# IPMI_Cooling_Device_Redundancy_Redundancy_Degraded_From_Non_Redundant                           Warning
+#
+##########################################################################################################
+#
 ## IPMI_Memory
 #
 # IPMI_Memory_No_Event                                           Nominal
