@@ -324,6 +324,19 @@ static struct ipmi_interpret_sel_config ipmi_interpret_sel_power_unit_redundancy
   };
 static unsigned int ipmi_interpret_sel_power_unit_redundancy_config_len = 8;
 
+static struct ipmi_interpret_sel_config ipmi_interpret_sel_cooling_device_redundancy_config[] =
+  {
+    { "IPMI_Cooling_Device_Redundancy_Fully_Redundant", IPMI_INTERPRET_STATE_NOMINAL, IPMI_INTERPRET_STATE_NOMINAL},
+    { "IPMI_Cooling_Device_Redundancy_Redundancy_Lost", IPMI_INTERPRET_STATE_CRITICAL, IPMI_INTERPRET_STATE_WARNING},
+    { "IPMI_Cooling_Device_Redundancy_Redundancy_Degraded", IPMI_INTERPRET_STATE_WARNING, IPMI_INTERPRET_STATE_WARNING},
+    { "IPMI_Cooling_Device_Redundancy_Non_Redundant_Sufficient_Resources_From_Redundant", IPMI_INTERPRET_STATE_CRITICAL, IPMI_INTERPRET_STATE_WARNING},
+    { "IPMI_Cooling_Device_Redundancy_Non_Redundant_Sufficient_Resources_From_Insufficient_Redundancy", IPMI_INTERPRET_STATE_CRITICAL, IPMI_INTERPRET_STATE_WARNING},
+    { "IPMI_Cooling_Device_Redundancy_Non_Redundant_Insufficient_Resources", IPMI_INTERPRET_STATE_CRITICAL, IPMI_INTERPRET_STATE_WARNING},
+    { "IPMI_Cooling_Device_Redundancy_Redundancy_Degraded_From_Fully_Redundant", IPMI_INTERPRET_STATE_WARNING, IPMI_INTERPRET_STATE_WARNING},
+    { "IPMI_Cooling_Device_Redundancy_Redundancy_Degraded_From_Non_Redundant", IPMI_INTERPRET_STATE_WARNING, IPMI_INTERPRET_STATE_WARNING},
+  };
+static unsigned int ipmi_interpret_sel_cooling_device_redundancy_config_len = 8;
+
 static struct ipmi_interpret_sel_config ipmi_interpret_sel_memory_config[] =
   {
     { "IPMI_Memory_Correctable_Memory_Error", IPMI_INTERPRET_STATE_WARNING, IPMI_INTERPRET_STATE_WARNING},
@@ -1214,6 +1227,12 @@ ipmi_interpret_sel_init (ipmi_interpret_ctx_t ctx)
     goto cleanup;
 
   if (_interpret_config_sel_init (ctx,
+                                  &ctx->interpret_sel.ipmi_interpret_sel_cooling_device_redundancy_config,
+                                  ipmi_interpret_sel_cooling_device_redundancy_config,
+                                  ipmi_interpret_sel_cooling_device_redundancy_config_len) < 0)
+    goto cleanup;
+
+  if (_interpret_config_sel_init (ctx,
                                   &ctx->interpret_sel.ipmi_interpret_sel_memory_config,
                                   ipmi_interpret_sel_memory_config,
                                   ipmi_interpret_sel_memory_config_len) < 0)
@@ -1516,6 +1535,9 @@ ipmi_interpret_sel_destroy (ipmi_interpret_ctx_t ctx)
 
   _interpret_config_sel_destroy (ctx,
                                  ctx->interpret_sel.ipmi_interpret_sel_power_unit_redundancy_config);
+
+  _interpret_config_sel_destroy (ctx,
+                                 ctx->interpret_sel.ipmi_interpret_sel_cooling_device_redundancy_config);
 
   _interpret_config_sel_destroy (ctx,
                                  ctx->interpret_sel.ipmi_interpret_sel_memory_config);
@@ -2119,6 +2141,7 @@ ipmi_interpret_sel_config_parse (ipmi_interpret_ctx_t ctx,
   int ipmi_interpret_sel_power_unit_flags[ipmi_interpret_sel_power_unit_config_len];
   int ipmi_interpret_sel_power_unit_device_present_flags[ipmi_interpret_sel_power_unit_device_present_config_len];
   int ipmi_interpret_sel_power_unit_redundancy_flags[ipmi_interpret_sel_power_unit_redundancy_config_len];
+  int ipmi_interpret_sel_cooling_device_redundancy_flags[ipmi_interpret_sel_cooling_device_redundancy_config_len];
   int ipmi_interpret_sel_memory_flags[ipmi_interpret_sel_memory_config_len];
   int ipmi_interpret_sel_drive_slot_flags[ipmi_interpret_sel_drive_slot_config_len];
   int ipmi_interpret_sel_drive_slot_state_flags[ipmi_interpret_sel_drive_slot_state_config_len];
@@ -2298,6 +2321,12 @@ ipmi_interpret_sel_config_parse (ipmi_interpret_ctx_t ctx,
                             ctx->interpret_sel.ipmi_interpret_sel_power_unit_redundancy_config,
                             ipmi_interpret_sel_power_unit_redundancy_flags,
                             ipmi_interpret_sel_power_unit_redundancy_config_len);
+
+  _fill_sel_config_options (config_file_options,
+                            &config_file_options_len,
+                            ctx->interpret_sel.ipmi_interpret_sel_cooling_device_redundancy_config,
+                            ipmi_interpret_sel_cooling_device_redundancy_flags,
+                            ipmi_interpret_sel_cooling_device_redundancy_config_len);
 
   _fill_sel_config_options (config_file_options,
                             &config_file_options_len,
