@@ -1,3 +1,8 @@
+2011-09-13  Albert Chu <chu11@llnl.gov>
+
+	* libfreeipmi/src/interpret/: Support cooling device redundancy
+	interpretation.
+	
 2011-09-12  Albert Chu <chu11@llnl.gov>
 
 	* libfreeipmi/src/interpret/: Support transition severity
